[package]
name = "archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.18.6"
md5 = "0.8.1"
postcard = { version = "1.1.3", features = ["alloc"] }
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
unicode-width = "0.2.2"
