[package]
name = "archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.4.0"
image = "0.25.10"
indicatif = "0.18.6"
kdtree = "0.8.0"
md5 = "0.8.1"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.2"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
unicode-width = "0.2.2"
uuid = { version = "1.23.5", features = ["v4"] }
